crates/cb-sema/tests/snapshots/lower_snapshots__function_address_lowers_to_func_addr.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn add(Int, Int) -> Int {
  locals:
    local0: a (Int, param)
    local1: b (Int, param)

  bb0:
    r0 = load_local local0
    r1 = load_local local1
    r2 = add r0, r1
    return r2
}

fn @main() -> Void {
  locals:
    local0: fp (FnPtr(Int, Int) -> Int)

  bb0:
    r0 = func_addr add
    store_local local0, r0
    return
}
