crates/cb-sema/tests/snapshots/lower_snapshots__function_call.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn Add(Int, Int) -> Int {
  locals:
    local0: a (Int, param)
    local1: b (Int, param)

  bb0:
    r0 = load_local local0
    r1 = load_local local1
    r2 = add r0, r1
    return r2
}

fn @main() -> Void {
  locals:
    local0: result (Int)

  bb0:
    r0 = const_int 3
    r1 = const_int 4
    r2 = call Add, r0, r1
    store_local local0, r2
    return
}
