crates/cb-sema/tests/snapshots/lower_snapshots__function_local_const.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
assertion_line: 110
expression: ir
---
fn foo() -> Int {
  bb0:
    r0 = const_int 42
    return r0
}

fn @main() -> Void {
  bb0:
    return
}
